fix calendar tasks container overflow

--- a/src/app/pages/calendar/calendar.component.scss
+++ b/src/app/pages/calendar/calendar.component.scss
@@ -16,15 +16,16 @@
         position: relative;
         width: 100%;
         height: calc(100dvh - $navbar-height);
+        max-height: calc(100dvh - $navbar-height);
         padding: 0 $gap-m;
+        overflow: hidden;
 
         .calendar-inner {
             display: grid;
             grid-template-columns: auto 1fr;
-            width: 100%;
-            height: 100%;
+            height: calc(100dvh - $navbar-height);
+            max-height: calc(100dvh - $navbar-height);
             overflow-y: auto;
-            // scroll-behavior: smooth;
 
             &::-webkit-scrollbar {
                 display: none;
@@ -62,8 +63,9 @@
             .calendar-content {
                 position: relative;
                 width: 100%;
-                height: 100%;
-                margin: $gap-s 0;
+                height: calc(100% - $gap-s);
+                margin-top: $gap-s;
+                overflow: hidden;
 
                 .task {
                     position: absolute;
